--- a/tmux.conf
+++ b/tmux.conf
@@ -184,6 +184,8 @@ set-window-option -g automatic-rename
 # color
 set -g default-terminal "screen-256color"
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 ###############################################################################
 ##
 ## Fixes
