update tmux bottom bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -108,7 +108,9 @@ set-option -g status-attr default
 ####### #{pane_current_path}
 ####### #(pmset -g batt)
 
-set -g status-left ' #[fg=default]# #[fg=red]#(whoami) #[fg=default]| #[fg=default]#[fg=green]#S #[fg=default]>> #[fg=blue]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=default](#(osascript ~/.tmux/tmux-spotify-info.sh))'
+## Player Code
+## #[fg=default](#(osascript ~/.tmux/tmux-spotify-info.sh))
+set -g status-left ' #[fg=default]# #[fg=red]#(whoami) #[fg=default]| #[fg=default]#[fg=green]#S #[fg=default]>> #[fg=blue]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
 set -g status-right '#[fg=default]: #[fg=default]%D # %H:%M'
 
 #### set -g status-right '#[fg=colour240,bg=colour236] #(osascript ~/.tmux/tmux-spotify-info.sh) #[fg=colour252,bg=colour240] #(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") up  #[fg=colour235,bg=colour252] %d %b (%A) %H:%M '
